<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPhoneActivity"
    android:shrinkColumns="0,1"
    android:stretchColumns="2">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/manufacturerNewPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/manufacturerText" />

        <EditText
            android:id="@+id/manufacturerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manufacturerText"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            android:layout_span="2"
            android:importantForAutofill="no"
            android:minHeight="50dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/modelNewPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/modelText" />

        <EditText
            android:id="@+id/modelEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/modelText"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            android:layout_span="3"
            android:importantForAutofill="no"
            android:minHeight="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/androidVersionNewPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/androidVersionText" />

        <EditText
            android:id="@+id/androidVersionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/androidVersionText"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            android:layout_span="3"
            android:importantForAutofill="no"
            android:minHeight="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/websiteNewPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/websiteText" />

        <EditText
            android:id="@+id/websiteEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/websiteText"
            android:layout_span="3"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            android:importantForAutofill="no"
            android:minHeight="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/websiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/websiteText" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:layout_margin="5dp"
            android:layout_span="3"/>
    </TableRow>
</TableLayout>